--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
         <h1 class="hero-title load-hidden">
           Hi, my name is <span class="text-color-main">Salvatore Rendo</span>
           <br />
-          Computer Science student and passionate about Cyber Security.
+          I'm a Computer Science student and passionate about Cyber Security.
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
@@ -77,6 +77,7 @@
                <br>
                I like programming with Java, C++ and Python
               </p>
+              <!-- RESUME SPAN, DELETE TO ADD RESUME, ADD IT ON /assets
               <span class="d-flex mt-3">
                 <a
                   rel="noreferrer"
@@ -87,6 +88,7 @@
                   View Resume
                 </a>
               </span>
+            -->
             </div>
           </div>
         </div>
@@ -145,8 +147,9 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/project.jpg"    
                     />
+                    <!-- 1366 x 767 -->
                   </div>
                 </a>
               </div>
@@ -271,13 +274,15 @@
       <div class="container">
         <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper load-hidden">
-          <p class="contact-wrapper__text">[Put your call to action here]</p>
+          <p class="contact-wrapper__text">If you want to get in touch:
+            <br> 
+            You can send me an email or contact me on Linkedin, link down below</p>
           <a
             rel="noreferrer"
             target="_blank"
             class="cta-btn cta-btn--resume"
-            href="mailto:example@email.com"
-            >Call to Action</a
+            href="mailto:salvatore.rendo.work@gmail.com"
+            >Send me an email</a
           >
         </div>
       </div>
@@ -291,10 +296,10 @@
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
         <div class="social-links">
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a rel="noreferrer" href="https://linkedin.com/in/salvatorerendo" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a rel="noreferrer" href="https://github.com/Salvatore-Rendo" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
         </div>
