--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,9 @@
     <!-- Todo: put here your site title -->
     <title>Salvatore Rendo Portfolio</title>
     <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
-    <meta name="keywords" content="[username], [name], skill" />
+    <meta name="keywords" content="Salvatore Rendo, Developer, Cyber Security" />
     <!-- Todo: improve your SEO by adding a small description of you -->
-    <meta name="description" content="[Your name here] | Developer" />
+    <meta name="description" content="Salvatore Rendo | Developer and Cyber security student" />
 
     <link
       rel="stylesheet"
