--- a/src/index.html
+++ b/src/index.html
@@ -106,17 +106,14 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 0</h3>
+                <h3 class="project-wrapper__text-title">Caesar Cipher</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    Software to encrypt a plaintext with Caesar cipher and to decrypt a ciphertext if it was encrypted with Caesar cipher.
+                    For terminal only, GUI in the future.
                   </p>
                 </div>
-                <a
+                <!-- <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
@@ -124,11 +121,12 @@
                 >
                   See Live
                 </a>
+                -->
                 <a
                   rel="noreferrer"
                   target="_blank"
-                  class="cta-btn text-color-main"
-                  href="#!"
+                  class="cta-btn cta-btn--hero"
+                  href="https://github.com/Salvatore-Rendo/caesar-cipher"
                 >
                   Source Code
                 </a>
@@ -147,7 +145,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"    
+                      src="assets/caesar-project.png"    
                     />
                     <!-- 1366 x 767 -->
                   </div>
