prject added + work in progress
added project 1 and added work in progress title in project 2

--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
               <p class="about-wrapper__info-text">
                I'm intrested in Cyber Security, Computer networks and Operating Systems.
                <br>
-               I like programming with Java, C++ and Python
+               I like programming in Python, C/C++ and Java.
               </p>
               <!-- RESUME SPAN, DELETE TO ADD RESUME, ADD IT ON /assets
               <span class="d-flex mt-3">
@@ -122,6 +122,7 @@
                   See Live
                 </a>
                 -->
+                <!-- for normal link class="cta-btn text-color-main"-->
                 <a
                   rel="noreferrer"
                   target="_blank"
@@ -159,16 +160,13 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 1</h3>
+                <h3 class="project-wrapper__text-title">Python Keylogger</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    Simple keylogger made with Python.
                   </p>
                 </div>
+                <!--
                 <a
                   rel="noreferrer"
                   target="_blank"
@@ -177,11 +175,13 @@
                 >
                   See Live
                 </a>
+              -->
+              <!-- for normal link class="cta-btn text-color-main"-->
                 <a
                   rel="noreferrer"
                   target="_blank"
-                  class="cta-btn text-color-main"
-                  href="#!"
+                  class="cta-btn cta-btn--hero"
+                  href="https://github.com/Salvatore-Rendo/simple-python-keylogger"
                 >
                   Source Code
                 </a>
@@ -189,7 +189,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="#!" target="_blank">
+                <a rel="noreferrer" href="https://github.com/Salvatore-Rendo/simple-python-keylogger" target="_blank">
                   <div
                     data-tilt
                     data-tilt-max="4"
@@ -200,7 +200,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/keylogger.png"
                     />
                   </div>
                 </a>
@@ -213,7 +213,7 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 2</h3>
+                <h3 class="project-wrapper__text-title">Project 2: WORK IN PROGRESS</h3>
                 <div>
                   <p class="mb-4">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -274,7 +274,7 @@
         <div class="contact-wrapper load-hidden">
           <p class="contact-wrapper__text">If you want to get in touch:
             <br> 
-            You can send me an email or contact me on Linkedin, link down below</p>
+            You can send me an email or contact me on Linkedin, links down below</p>
           <a
             rel="noreferrer"
             target="_blank"
