--- a/src/index.html
+++ b/src/index.html
@@ -262,6 +262,62 @@
             </div>
           </div>
           <!-- /END Project -->
+
+          <!-- Notice: each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">My Blog: <br> Cyberwall Security</h3>
+                <div>
+                  <p class="mb-4">
+                    Cyberwall Secuirty is a blog were you can learn the 
+                    foundamentals and priciples of cybersecurity.
+                    <br>
+                    Futhermore, there is a LAB section were I describe in detail 
+                    some hands-on projects about cybersecurity.
+                  </p>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://cyberwallsecurity.wordpress.com/"
+                >
+                  See website
+                </a>
+                <!--
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn text-color-main"
+                  href="#!"
+                >
+                  Source Code
+                </a>
+                -->
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a rel="noreferrer" href="https://cyberwallsecurity.wordpress.com/" target="_blank">
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="assets/cyberwall.jpg"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
         </div>
       </div>
     </section>
@@ -272,8 +328,8 @@
       <div class="container">
         <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper load-hidden">
-          <p class="contact-wrapper__text">If you want to get in touch:
-            <br> 
+          <p class="contact-wrapper__text">
+
             You can send me an email or contact me on Linkedin, links down below</p>
           <a
             rel="noreferrer"
@@ -282,6 +338,17 @@
             href="mailto:salvatore.rendo.work@gmail.com"
             >Send me an email</a
           >
+
+          <br><br>
+
+          <a
+            rel="noreferrer"
+            target="_blank"
+            class="cta-btn cta-btn--resume"
+            href="https://linkedin.com/in/salvatorerendo"
+            >Contact me on Linkedin</a
+          >
+          
         </div>
       </div>
     </section>
