--- a/src/index.html
+++ b/src/index.html
@@ -330,7 +330,7 @@
         <div class="contact-wrapper load-hidden">
           <p class="contact-wrapper__text">
 
-            You can send me an email or contact me on Linkedin, links down below</p>
+            You can send me an email or contact me on Linkedin.</p>
           <a
             rel="noreferrer"
             target="_blank"
