--- a/src/index.html
+++ b/src/index.html
@@ -69,13 +69,15 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                I'm a computer science student at the University of Catania.
+                I'm a Ms Cyber Security student at the University of Milan.
+                I earned my Bs degree in Computer Science at the University of Catania.
 
               </p>
               <p class="about-wrapper__info-text">
-               I'm intrested in Cyber Security, Computer networks and Operating Systems.
+               I'm intrested in Cyber Security, expecially in Network Security, Cloud Security and Software Security.
+               I'm also intrested in other Computer Science fields like Operating Systems and Computer Networks.
                <br>
-               I like programming in Python, C/C++ and Java.
+               I prefer programming in Python, C/C++ and Java, although i'm always open to learn new ones.
               </p>
               <!-- RESUME SPAN, DELETE TO ADD RESUME, ADD IT ON /assets
               <span class="d-flex mt-3">
@@ -101,6 +103,62 @@
       <div class="container">
         <div class="project-wrapper">
           <h2 class="section-title dark-blue-text">Projects</h2>
+
+          <!-- Notice: each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">My Blog: <br> Cyberwall Security</h3>
+                <div>
+                  <p class="mb-4">
+                    Cyberwall Secuirty is a blog were you can learn the 
+                    foundamentals and priciples of cybersecurity.
+                    <br>
+                    Futhermore, there is a LAB section were I describe in detail 
+                    some hands-on projects about cybersecurity.
+                  </p>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://cyberwallsecurity.wordpress.com/"
+                >
+                  See website
+                </a>
+                <!--
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn text-color-main"
+                  href="#!"
+                >
+                  Source Code
+                </a>
+                -->
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a rel="noreferrer" href="https://cyberwallsecurity.wordpress.com/" target="_blank">
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="assets/cyberwall.jpg"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
 
           <!-- Notice: each .row is a project -->
           <div class="row">
@@ -255,62 +313,6 @@
                       alt="Project Image"
                       class="img-fluid"
                       src="assets/project.jpg"
-                    />
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <!-- /END Project -->
-
-          <!-- Notice: each .row is a project -->
-          <div class="row">
-            <div class="col-lg-4 col-sm-12">
-              <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">My Blog: <br> Cyberwall Security</h3>
-                <div>
-                  <p class="mb-4">
-                    Cyberwall Secuirty is a blog were you can learn the 
-                    foundamentals and priciples of cybersecurity.
-                    <br>
-                    Futhermore, there is a LAB section were I describe in detail 
-                    some hands-on projects about cybersecurity.
-                  </p>
-                </div>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn cta-btn--hero"
-                  href="https://cyberwallsecurity.wordpress.com/"
-                >
-                  See website
-                </a>
-                <!--
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn text-color-main"
-                  href="#!"
-                >
-                  Source Code
-                </a>
-                -->
-              </div>
-            </div>
-            <div class="col-lg-8 col-sm-12">
-              <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="https://cyberwallsecurity.wordpress.com/" target="_blank">
-                  <div
-                    data-tilt
-                    data-tilt-max="4"
-                    data-tilt-glare="true"
-                    data-tilt-max-glare="0.5"
-                    class="thumbnail rounded js-tilt"
-                  >
-                    <img
-                      alt="Project Image"
-                      class="img-fluid"
-                      src="assets/cyberwall.jpg"
                     />
                   </div>
                 </a>
