--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
         <h1 class="hero-title load-hidden">
           Hi, my name is <span class="text-color-main">Salvatore Rendo</span>
           <br />
-          I'm a Computer Science student and passionate about Cyber Security.
+          I'm a Bs Computer Science graduate, I'm a Ms student and passionate about Cyber Security.
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
@@ -70,11 +70,12 @@
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
                 I'm a Ms Cyber Security student at the University of Milan.
-                I earned my Bs degree in Computer Science at the University of Catania.
-
               </p>
               <p class="about-wrapper__info-text">
-               I'm intrested in Cyber Security, expecially in Network Security, Cloud Security and Software Security.
+                I earned my Bs degree in Computer Science at the University of Catania.
+              </p>
+              <p class="about-wrapper__info-text">
+               I'm intrested in Cyber Security, especially in Network Security, Cloud Security and Software Security.
                I'm also intrested in other Computer Science fields like Operating Systems and Computer Networks.
                <br>
                I prefer programming in Python, C/C++ and Java, although i'm always open to learn new ones.
@@ -112,7 +113,7 @@
                 <div>
                   <p class="mb-4">
                     Cyberwall Secuirty is a blog were you can learn the 
-                    foundamentals and priciples of cybersecurity.
+                    foundamentals and priciples of Cyber Security.
                     <br>
                     Futhermore, there is a LAB section were I describe in detail 
                     some hands-on projects about cybersecurity.
