--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
         <h1 class="hero-title load-hidden">
           Hi, my name is <span class="text-color-main">Salvatore Rendo</span>
           <br />
-          I'm a Bs Computer Science graduate, I'm a Ms student and passionate about Cyber Security.
+          I'm a Ms student and passionate about Cyber Security.
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
